deployment/k8s/frontend.yaml

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: portfolio-prod
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: portfolio-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/KonstantinosLamprou/portfolio-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
