deployment/k8s/minio.yaml


apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: portfolio-prod
spec:
  selector:
    app: minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001

---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-deployment
  namespace: portfolio-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:latest
          # Der Startbefehl für MinIO (Datenordner + Port für das Web-Dashboard)
          args:
            - server
            - /data
            - --console-address
            - ":9001"
          ports:
            - containerPort: 9000
            - containerPort: 9001
          volumeMounts:
            - name: minio-storage
              mountPath: /data
      volumes:
        - name: minio-storage
          persistentVolumeClaim:
            claimName: minio-pvc
