deployment/k8s/seq.yaml


apiVersion: v1
kind: Service
metadata:
  name: seq-service
spec:
  selector:
    app: seq
  ports:
    - protocol: TCP
      port: 5341
      targetPort: 80 

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: seq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seq
  template:
    metadata:
      labels:
        app: seq
    spec:
      containers:
        - name: seq
          image: datalust/seq:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: seq-storage
              mountPath: /data
      volumes:
        - name: seq-storage
          persistentVolumeClaim:
            claimName: seq-pvc
